add: adicionando rutas para la tabla paises y categorias
